2010-08-15  trunk -- lots of changes
	* gag lists (use regular expressions to block content -- trolls, for instance, when mentioned by those you subscribe)
	* groups support
	* receives and sends direct messages

2010-06-12  release 0.9.9
	* Reorder UI for bottom posting and get more screen used for the messages list
	* Fix a couple of common crasher bugs

2010-??-??  release 0.9.0
	* Zoom avatars when pressing avatar icon for about 1s
	* Better url and browser handling
	* Support for user, favorites and public timelines in addition to friends
	* Favorites support (marking and unmarking)
	* (Un)Subscribe users mentioned in statueses
	* Replace most glib usage for EFL usage (needs good replacement for glib's excellent PCRE functions

2009-12-27  release 0.8.0
	* Multiple accounts at the same time
	* Use an sqlite3 database for posts cache (in and out, although out still is incomplete)
	* Cache management

2009-10-11  release 0.7.0
	* Replacement of the side buttons by hover's fired up by pressing for about 1s over the bubble
	* Usage of inwins for entering user and domain data in the settings window
	* Usage of hoversel to gain a few more space on the toolbar, specially for future features

2009-07-12  release 0.6.0

	* Makefile.am (SUBDIRS): Add po.
	(ACLOCAL_AMFLAGS): New variable.
	(EXTRA_DIST): New variable.
	* configure.ac (AC_OUTPUT): Add po/Makefile.in.

2009-07-09 - release 0.5.1
	* Fix a crasher bug in the text entry for posting
	* Create ~/.elmdentica/cache/icons so showing icons will be able to work 
	* Adds domain editing 
	* If no account exists, force the settings dialog
	* If no domain exists, force editing domains
	* Capture http errors when they happen
	* Detects links (but doesn't do anyting useful with them yet)

2009-07-03 - release 0.5.0
	* Move auth configuration into gconf
	* Use dialogs to add/delete accounts
	* Support twitter

2009-06-29 - release 0.4.0
	* Add retweet/repeat/recycle button
	* Add reply button
	* Add source when posting
